--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "firebase-admin": "^5.12.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.4"
